--- a/Page.html
+++ b/Page.html
@@ -1,7 +1,12 @@
-# DriveU_assignment
-
-## Website Link ("https://driveu-lcdvp9vlp-pummysh.vercel.app/")
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
     <h2>Home page</h2>
     <img src="./images/homePage.png" alt="">
     <h2>Garage</h2>
@@ -14,4 +19,5 @@
     <img src="./images/checkout.png" alt="">
     <h2>Booking</h2>
     <img src="./images/bookings.png" alt="">
-
+</body>
+</html>
